[package]
name = "keygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
libsodium-sys-stable = "1.19.27"
rand = "0.8.5"
secp256k1 = {version = "0.28.0", features = ["rand-std", "rand", "global-context"]}

[profile.release]
strip = true
lto = true
panic = "abort"

[[bin]]
name = "keygen_ed25519"
path = "src/ed25519.rs"

[[bin]]
name = "keygen_secp256k1"
path = "src/secp256k1.rs"

