[package]
name = "oyster-keygen"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
libsodium-sys-stable = "1.19.27"
rand = "0.8.5"
secp256k1 = {version = "0.28.0", features = ["rand-std", "rand", "global-context"]}

[profile.release]
strip = true
lto = true
panic = "abort"

[[bin]]
name = "keygen-ed25519"
path = "src/ed25519.rs"

[[bin]]
name = "keygen-secp256k1"
path = "src/secp256k1.rs"
