[package]
name = "oyster-keygen"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
libsodium-sys-stable = "1.20.4"
rand = "0.8.5"
secp256k1 = {version = "0.28.2", features = ["rand-std", "rand", "global-context"]}

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[[bin]]
name = "keygen-ed25519"
path = "src/ed25519.rs"

[[bin]]
name = "keygen-secp256k1"
path = "src/secp256k1.rs"
